--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "express": "^4.14.0",
         "nodemon": "^2.0.6",
         "normalize.css": "^8.0.1",
+        "peerjs": "^1.3.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-redux": "^7.1.0",
