--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "scripts": {
         "build": "webpack --mode production",
         "dev:client": "webpack serve --mode development",
-        "dev:server": "nodemon --watch server --ignore server/uploads server/server.js",
+        "dev:server": "nodemon --watch server --ignore server/uploads server/index.js",
         "dev": "concurrently \"npm:dev:*\" --kill-others",
-        "start": "node server/server.js"
+        "start": "node server/index.js"
     },
     "engines": {
         "node": "14"
@@ -27,6 +27,7 @@
         "eslint": "^7.16.0",
         "eslint-plugin-react": "^7.12.4",
         "express": "^4.14.0",
+        "mongoose": "^5.11.13",
         "nodemon": "^2.0.6",
         "normalize.css": "^8.0.1",
         "peerjs": "^1.3.1",
@@ -50,6 +51,6 @@
         "babel-plugin-styled-components": "^1.12.0"
     },
     "keywords": [],
-    "author": "",
+    "author": "Alistair Quinn",
     "license": "ISC"
 }
