--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "scripts": {
         "build": "webpack --mode production",
         "dev:client": "webpack serve --mode development",
-        "dev:server": "nodemon --watch server --ignore server/uploads server/index.js",
+        "dev:server": "nodemon --watch server --ignore server/uploads server/server.js",
         "dev": "concurrently \"npm:dev:*\" --kill-others",
-        "start": "node server/index.js"
+        "start": "node server/server.js"
     },
     "engines": {
         "node": "14"
