--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "babel-loader": "^8.2.2",
         "compression": "^1.7.0",
         "concurrently": "^5.3.0",
+        "cookie-session": "^1.4.0",
         "css-loader": "^5.0.1",
         "eslint": "^7.16.0",
         "eslint-plugin-react": "^7.12.4",
