--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@babel/preset-react": "^7.12.10",
         "axios": "^0.21.1",
         "babel-loader": "^8.2.2",
+        "bcrypt": "^5.0.0",
         "compression": "^1.7.0",
         "concurrently": "^5.3.0",
         "cookie-session": "^1.4.0",
