--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.2",
         "redux-thunk": "^2.3.0",
+        "socket.io": "^3.0.4",
+        "socket.io-client": "^3.0.4",
         "style-loader": "^2.0.0",
         "styled-components": "^4.1.3",
         "url-loader": "^4.1.1",
