--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "eslint": "^7.16.0",
         "eslint-plugin-react": "^7.12.4",
         "express": "^4.14.0",
+        "heroicons-react": "^1.3.0",
         "mongoose": "^5.11.13",
         "nodemon": "^2.0.6",
         "normalize.css": "^8.0.1",
