--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "peerjs": "^1.3.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-player": "^2.8.2",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
